# SwarmBook

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: pages.yml  release.yaml
client/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
client/src/: main.tsx  routeTree.gen.ts
client/src-tauri/: Cargo.toml  tauri.conf.json
client/src-tauri/src/: lib.rs  main.rs
client/src-tauri/src/commands/: identify.rs  mod.rs  multiaddr.rs  peer_id.rs  ping.rs
client/src/commands/: identify.ts  index.ts  multiaddr.ts  peer-id.ts  ping.ts
client/src/components/layout/: app-sidebar.tsx
client/src/components/ui/: button.tsx
client/src/routes/: __root.tsx  chat.tsx  identify.tsx  index.tsx  multiaddr.tsx  peer-id.tsx  ping.tsx
docs/: astro.config.mjs  package.json  pnpm-lock.yaml
docs/src/content/docs/: index.mdx
docs/src/content/docs/01-core-concepts/: 01-what-is-p2p.md  02-libp2p-overview.md  03-first-node.mdx  03-peer-identity.md  04-multiaddr.md  04-peer-identity.md  05-multiaddr.md  06-swarm.md  07-first-node.md
docs/src/content/docs/01-p2p-basics/: 01-what-is-p2p.md  02-libp2p-overview.md  03-peer-identity.md
docs/src/content/docs/02-protocols/: 07-identify.md  07-identify.mdx  08-request-response.md  09-streams.md  10-custom-protocol.md
docs/src/content/docs/02-transport/: 10-security.md  11-muxing.md
docs/src/content/docs/02-transport-security/: 05-transport-abstraction.md  06-tcp-quic.md  07-websocket.md  10-connection-upgrade.md
docs/src/content/docs/03-protocols/: 13-ping-deep.md  16-streams.md
examples/identify/: Cargo.toml
examples/identify/src/: main.rs
examples/peerid/: Cargo.toml
examples/peerid/src/: main.rs
examples/ping/: Cargo.toml
examples/ping/src/: main.rs
plans/: 2025-12-21-curriculum-design.md
plans/curriculum/: 01-curriculum-design.md  02-advanced-p2p-mcp.md  03-ultimate-p2p-knowledge.md  04-p2p-agent-network.md
plans/mcp-over-libp2p/: mcp-over-libp2p-spec-zh.md  mcp-over-libp2p-spec.md  paper-mcp-over-libp2p-zh.md  paper-mcp-over-libp2p.md  rfc-mcp-transport-libp2p.md
(+34 files in other folders)
